in app xml line 8 and in engineerListWindow line 26-27

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -5,7 +5,8 @@
              StartupUri="MainWindow.xaml">
   
         <Application.Resources>
-            <ResourceDictionary>
+        <local:EngineerCollection x:Key="EngineerCollectionKey" />
+        <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
                     <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                     <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
