--- a/PL/Engineer/EngineerListWindow.xaml
+++ b/PL/Engineer/EngineerListWindow.xaml
@@ -23,7 +23,8 @@
             <!--select:-->
             <Label Content="Label" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center" Grid.Column="0"/>
             <!--select combo box-->
-            <ComboBox HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1"/>
+            <ComboBox ItemsSource="{Binding Source={StaticResource EngineerCollectionKey}}"
+                    Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </Grid>
         <ListView Margin="5" Grid.Row="1" ItemsSource="{Binding Path=engineerList}">
             <ListView.View>
