--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -7,7 +7,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <local:EngineerCollection x:Key="EngineerCollectionKey" />
+            <local:TaskCollection x:Key="TaskCollectionKey" />
             <local:ConvertIdToContent x:Key="ConvertIdToContentKey" />
+            <local:ComplexityCollection x:Key="ComplexityCollectionKey" />
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
