--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -5,16 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="400" Width="400">
+    <!--Extrnal Grid-->
     <Grid>
-        <!--button to show all engineers-->
-        <Button Content="Handle Engineers" HorizontalAlignment="Right" Margin="0,171,585,0" VerticalAlignment="Top" Height="85" Width="164"
-                Click="btnEngineers_Click"/>
-        <!--button for Initialization-->
-        <Button Content="Initialization" HorizontalAlignment="Left" Margin="326,171,0,0" VerticalAlignment="Top" Height="85" Width="164"
-                Click="btnInitialization_Click"/>
-        <!--button for Reset-->
-        <Button Content="Reset" HorizontalAlignment="Left" Margin="600,171,0,0" VerticalAlignment="Top" Height="85" Width="164"
-                Click="btnReset_Click"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100*"/>
+            <RowDefinition Height="300"/>
+        </Grid.RowDefinitions>
+        <!--Internal, Upper Grid-->
+        <Label Content="Main screen" FontSize="35" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Height="55" Width="206"/>
+        <!--Internal, seceng Grid-->
+        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="1" VerticalAlignment="Stretch" Width="auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <!--Internal, left Grid-->
+            <Button Content="Manager" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,75,0,0" Click="btnManager_click"/>
+            <Button Content="Engineer" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,190,0,0" Click="bteEngineer_click" />
+        </Grid>
     </Grid>
 </Window>
