--- a/PL/Task/TaskListWindow.xaml
+++ b/PL/Task/TaskListWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="PL.Engineer.EngineerListWindow"
+﻿<Window x:Class="PL.Task.TaskListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PL.Engineer"
+        xmlns:local="clr-namespace:PL.Task"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
-        Title="EngineerListWindow" Height="450" Width="750">
+        Title="TaskListWindow" Height="640" Width="750">
     <!--Extrnal Grid-->
     <Grid>
         <Grid.RowDefinitions>
@@ -23,27 +23,25 @@
             <!--select:-->
             <Label Content="select:" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center" Grid.Column="0"/>
             <!--select combo box-->
-            <ComboBox SelectedValue="{Binding Path=experience, Mode=TwoWay}"
-                ItemsSource="{Binding Source={StaticResource EngineerCollectionKey}}"
+            <ComboBox SelectedValue="{Binding Path=status, Mode=TwoWay}"
+                ItemsSource="{Binding Source={StaticResource TaskCollectionKey}}"
                 SelectionChanged="ComboBox_SelectionChanged"
                 HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1"/>
         </Grid>
         <!--listView-->
-        <ListView Margin="5" Grid.Row="1" ItemsSource="{Binding Path=engineerList}"
-                  MouseDoubleClick="lv_MouseButtonEventArgs" >
+        <ListView Margin="5" Grid.Row="1" ItemsSource="{Binding Path=taskList}"
+                  MouseDoubleClick="lv_MouseButtonEventArgs">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Engineer Id" DisplayMemberBinding="{Binding Id}"/>
-                    <GridViewColumn Header="Engineer Name" DisplayMemberBinding="{Binding Name}"/>
-                    <GridViewColumn Header="Engineer Email" DisplayMemberBinding="{Binding Email}"/>
-                    <GridViewColumn Header="Engineer Cost" DisplayMemberBinding="{Binding Cost}"/>
-                    <GridViewColumn Header="Engineer Level" DisplayMemberBinding="{Binding Level}"/>
+                    <GridViewColumn Header="Task Id" DisplayMemberBinding="{Binding Id}"/>
+                    <GridViewColumn Header="Task Alias" DisplayMemberBinding="{Binding Alias}"/>
+                    <GridViewColumn Header="Task Description" DisplayMemberBinding="{Binding Describtion}"/>
+                    <GridViewColumn Header="Task Status" DisplayMemberBinding="{Binding status}"/>
                 </GridView>
             </ListView.View>
         </ListView>
         <!--add button-->
-        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"
-                Click="btnAdd_Click"/>
+        <Button Content="Add" Grid.Row="1" HorizontalAlignment="Center" Height="50" Width="100"
+                Click="btnAdd_click" Margin="0,531,0,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
     </Grid>
-
 </Window>
