--- a/PL/Engineer/EngineerWindow.xaml
+++ b/PL/Engineer/EngineerWindow.xaml
@@ -16,8 +16,9 @@
             <RowDefinition Height="30*"/>
             <RowDefinition Height="30*"/>
             <RowDefinition Height="30*"/>
-            <RowDefinition Height="30*"/>
             <RowDefinition Height="50*"/>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="30*"/>
         </Grid.RowDefinitions>
         <!--Internal, fiest line Grid-->
         <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="1" VerticalAlignment="Stretch" Width="auto">
@@ -47,7 +48,7 @@
             </Grid.ColumnDefinitions>
             <Label Content="Cost:" HorizontalAlignment="Right" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="0"/>
             <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120"
-                     Text="{Binding Cost, Mode=TwoWay}" />
+                     Text="{Binding Cost, Mode=TwoWay}" DataContextChanged="TextBox_DataContextChanged" />
         </Grid>
         <!--Internal, fourth line Grid-->
         <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="4" VerticalAlignment="Stretch" Width="auto">
@@ -66,15 +67,36 @@
                 <ColumnDefinition Width="200*"/>
             </Grid.ColumnDefinitions>
             <Label Content="Level:" HorizontalAlignment="Right" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="0"/>
-            <ComboBox Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" Width="120"
-                      ItemsSource="{Binding Source={StaticResource ComplexityCollectionKey}}"
-                      SelectedValue="{Binding Level, Mode=TwoWay}" IsEnabled="False"/>
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" TextWrapping="Wrap"
+                     Text="{Binding Level, Mode=TwoWay}" VerticalAlignment="Center" Width="120" IsEnabled="False"/>
+
         </Grid>
-        <!--Internal, sixth line Grid-->
+        <!--Internal, 6 line Grid-->
         <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="6" VerticalAlignment="Stretch" Width="auto">
-            <Button Grid.Column="1" Content="{Binding Id,Mode=OneTime,Converter={StaticResource ConvertIdToContentKey}}"
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100*"/>
+                <ColumnDefinition Width="200*"/>
+            </Grid.ColumnDefinitions>
+            <Label Content="Task:" HorizontalAlignment="Left" Margin="15,10,0,0" VerticalAlignment="Top"/>
+            <Label Content="id:" HorizontalAlignment="Left" Margin="55,-3,0,0" VerticalAlignment="Top"/>
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="10,1,0,0" TextWrapping="Wrap"
+                     VerticalAlignment="Top" Width="120" Height="20" Text="{Binding Task.Id,Mode=TwoWay}" IsEnabled="False"/>
+            <Label Content="Alias" HorizontalAlignment="Left" Margin="55,18,0,0" VerticalAlignment="Top"/>
+            <TextBox Grid.Column="1" HorizontalAlignment="Left" Margin="10,30,0,0" TextWrapping="Wrap"
+                     VerticalAlignment="Top" Width="120" Height="20" Text="{Binding Task.Alias,Mode=TwoWay}" IsEnabled="False"/>
+        </Grid>
+        <!--Internal, 7 line Grid-->
+        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="7" VerticalAlignment="Stretch" Width="auto">
+            <Button Content="yes" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,25,0,0" Width="34" Click="Button_Click"/>
+            <Label Content="Do you want to assign a task?" HorizontalAlignment="Center" VerticalAlignment="Top"
+                   IsEnabled="{Binding Task,Converter={StaticResource ConvertTaskInEngineerToBool1Key}}"/>
+
+        </Grid>
+        <!--Internal, 8 line Grid-->
+        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="8" VerticalAlignment="Stretch" Width="auto">
+            <Button Content="{Binding Id,Mode=OneTime,Converter={StaticResource ConvertIdToContentKey}}"
                     HorizontalAlignment="Center" VerticalAlignment="Center" Width="80"
-                    Click="btnAddUpdate_Click"/>
+                    Click="btnAddUpdate_Click" Height="30"/>
         </Grid>
     </Grid>
 </Window>
