--- a/PL/ManagerWindow.xaml
+++ b/PL/ManagerWindow.xaml
@@ -22,13 +22,12 @@
                 Grid.Row="1" Click="btnTasks_click"/>
         <!--button to show Gant (NEED WORK)-->
         <Button Content="Gant" HorizontalAlignment="Center" Margin="0,127,0,0" VerticalAlignment="Top" Height="44" Width="125"
-                Grid.Row="1"/>
+                Grid.Row="1" Click="Button_Click"/>
         <!--button for Initialization-->
         <Button Content="Initialization" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center" Height="44" Width="125"
                 Grid.Row="2" Click="btnInitialization_Click"/>
         <!--button for Reset-->
         <Button Content="Reset" HorizontalAlignment="Left" Margin="235,0,0,0" VerticalAlignment="Center" Height="45" Width="125"
                 Grid.Row="2" Click="btnReset_Click"/>
-
     </Grid>
 </Window>
