--- a/PL/Engineer/EngineerListWindow.xaml
+++ b/PL/Engineer/EngineerListWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PL.Engineer"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
-        Title="EngineerListWindow" Height="450" Width="750">
+        Title="EngineerListWindow" Height="450" Width="750" Background="LightSlateGray">
     <!--Extrnal Grid-->
     <Grid>
         <Grid.RowDefinitions>
