--- a/PL/Engineer/EngineerWindow.xaml
+++ b/PL/Engineer/EngineerWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PL.Engineer"
         mc:Ignorable="d"
         DataContext="{Binding CurrentEngineer, RelativeSource={RelativeSource self}, Mode=TwoWay}"
-        Title="EngineerWindow" Height="350" Width="300">
+        Title="EngineerWindow" Height="350" Width="300" Background="LightSlateGray">
     <!--Extrnal Grid-->
     <Grid>
         <Grid.RowDefinitions>
