--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
 
-        Title="MainWindow" Height="400" Width="400">
+        Title="MainWindow" Height="400" Width="400" Background="LightSlateGray">
     <!--Extrnal Grid-->
     <Grid>
         <Grid.RowDefinitions>
